examples/test/testpolicy18932.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18932
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key26: value40
      key39: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value13
          key32: value10
          key41: value36
      podSelector:
        matchLabels:
          key6: value18
          key14: value9
          key45: value19
